// source: blueprint_service.proto

syntax = "proto3";

package pb.v1;

option go_package = "github.com/zcubbs/power";

import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";
import "v1/rpc_generate_project.proto";
import "v1/rpc_get_blueprints.proto";
import "v1/rpc_ping.proto";
import "v1/empty.proto";

option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
  info: {
    title: "Power API";
    version: "0.1.0";
    contact: {
      name: "Power API";
      url: "https://github.com/zcubbs/power";
      email: "zcubbs@pm.me";
    };
  };
};

service BlueprintService {
  rpc Ping (Empty) returns (PingResponse){
    option (google.api.http) = {
      get: "/v1/ping"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      tags: "Ops"
      summary: "Ping the server";
      description: "Ping the server";
    };
  }

  rpc GenerateProject (GenerateProjectRequest) returns (GenerateProjectResponse) {
    option (google.api.http) = {
      post: "/v1/generate"
      body: "*"
    };
  }

  rpc GetBlueprints (GetBlueprintListRequest) returns (GetBlueprintListResponse) {
    option (google.api.http) = {
      get: "/v1/blueprints"
    };
  }
}


